# SyncContext

./: .env.example  .gitignore  .mcpizeignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.redis.yml  docker-compose.yml  mcpize.yaml  pyproject.toml  requirements.txt  synccontext
.github/workflows/: ci.yml  docker-publish.yml
.mcpize/: project.json
.serena/: project.yml
core/: auth.py  db.py  memory.py  migrations.py  models.py  search.py
core/embeddings/: __init__.py  base.py  gemini.py  ollama.py  openai.py
core/vectorstore/: __init__.py  base.py  pgvector_store.py  redis_store.py
deploy/: init-db.sh  init-db.sql  manage-projects.sql  swarm-stack.yml
docs/: MCPIZE.md  SETUP_GUIDE.md
migrations/: 001_initial.sql  002_multi_project.sql
server/: config.py  context.py  main.py  middleware.py  runtime.py  tools.py
tests/: test_auth.py  test_config.py  test_embeddings.py  test_main.py  test_middleware.py  test_migrations.py  test_models.py  test_tools_registration.py  test_vectorstore.py
