[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synccontext"
version = "0.1.0"
description = "Shared team memory MCP server with semantic search"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "mcp[cli]>=1.9.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",
    "redis[hiredis]>=5.0.0",
    "numpy>=1.26.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
ollama = ["ollama>=0.4.0"]
openai = ["openai>=1.60.0"]
voyageai = ["voyageai>=0.3.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9.0",
]

[project.scripts]
synccontext = "server.main:main"

[tool.hatch.build.targets.wheel]
packages = ["core", "server"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
